# patinaje

./: README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: nextjs-best-practices.mdc  reactjs-best-practices.mdc  rust-best-practices.mdc  shadcn-ui-best-practices.mdc  tailwindcss-best-practices.mdc  tauri-best-practices.mdc  tauri-dev.mdc  typescript-best-practices.mdc
src/: App.tsx
src-tauri/: Cargo.toml  patinaje.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  db.rs  main.rs  models.rs
src-tauri/src/services/: evaluation_service.rs  mod.rs
src/components/: AthleteManager.tsx  ControlPanel.tsx  EditObservationsModal.tsx  EvaluationHistory.tsx  ExportEvaluations.tsx  FinishModal.tsx  StatusDisplay.tsx  Timer.tsx  Track.tsx
src/hooks/: useRecoveryTimer.ts  useServices.ts  useTotalTimer.ts  useWorkTimer.ts
src/services/: TimerService.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: audio.ts  audio.tsx  testData.ts  timing.ts  timing.tsx
src/workers/: timer.worker.ts
