[package]
name = "patinaje"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

exclude = ["resources/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "patinaje_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.39"

[features]
custom-protocol = ["tauri/custom-protocol"]
